--- a/assets/style.css
+++ b/assets/style.css
@@ -1,17 +1,20 @@
+body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: whitesmoke;
+}
 .canvas{
+    background-color: white;
     border:1px black dotted;
     position:absolute;
-    top:200px;
+    top:180px;
     bottom:0px;
-    left:160px;
+    left:200px;
     right:0px
 }
-
 #canvas-draft{
     background-color: transparent;
-}
-body{
-    overflow:hidden;
 }
 #canvas-container{
     height:550px;
@@ -22,9 +25,12 @@ body{
     height: 100%;
     width: 150px;
     z-index: 5;
-
 }
 .container-picker {
     position: absolute;
     padding: 10px 0 10px 300px;
 } 
+label {
+    width: 30px;
+    height: 30px;
+}
