--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,12 @@ body {
     padding: 10px 0 10px 300px;
 } 
 label {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
+}
+#color-input {
+    display: none;
+}
+#color-picker {
+    display: none;
 }
